--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="images/Heart.png" alt="black clover asta"></td>
+        <td><img src="images/Heart.png" alt="deadpool"></td>
         <td><h1>RaghuRamReddy</h1>
         <p> <em>Student at <strong><a href="https://www.gnithyd.ac.in/">GNIT </a>Hyderabad</strong></em></p>
         <p><em>I am just a newbie developer.I love to build things for my own satisfaction and <strong>I AM GOD 😇</strong></em></p></td>
@@ -18,7 +18,6 @@
         <li>D.O.B:13/02/2003</li>
         <li>Gender:MALE</li>
         <a href="contact.html">CONTACT INFO</a>
-        <a href="inputs.html">HTML INPUTS</a>
         </ul>
         <hr size="4"noshade>
     <h3>PROGRAMMING SKILLS</h3>
